# kaggle-competitions

./: .gitignore  README.md  base-requirements.txt  pyproject.toml
competitions/crunchdao/: pyproject.toml
competitions/crunchdao/notebooks/: trial1.ipynb
competitions/geophysical/: requirements.txt
competitions/geophysical/configs/: config.yaml
competitions/ieee/: Test1.ipynb  hello.py  pyproject.toml
