[project]
name = "kaggle-competitions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kaggle>=1.8.3",
    "lab>=8.6",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
